# generated/java/api/openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.3
 info:
   description: An OpenAPI specification for Blizzard API
   title: Blizzard API
-  version: 0.1.0
+  version: 0.2.0
 servers:
 - url: "https://{region}.api.blizzard.com"
   variables:
@@ -1009,18 +1009,20 @@ components:
             de_DE: de_DE
           id: 0
         spec_talent_tree:
-          it_IT: it_IT
-          ru_RU: ru_RU
-          en_GB: en_GB
-          zh_TW: zh_TW
-          ko_KR: ko_KR
-          en_US: en_US
-          es_MX: es_MX
-          pt_BR: pt_BR
-          es_ES: es_ES
-          zh_CN: zh_CN
-          fr_FR: fr_FR
-          de_DE: de_DE
+          name:
+            it_IT: it_IT
+            ru_RU: ru_RU
+            en_GB: en_GB
+            zh_TW: zh_TW
+            ko_KR: ko_KR
+            en_US: en_US
+            es_MX: es_MX
+            pt_BR: pt_BR
+            es_ES: es_ES
+            zh_CN: zh_CN
+            fr_FR: fr_FR
+            de_DE: de_DE
+          id: 0
         name:
           it_IT: it_IT
           ru_RU: ru_RU
@@ -1063,18 +1065,20 @@ components:
             de_DE: de_DE
         id: 0
         power_type:
-          it_IT: it_IT
-          ru_RU: ru_RU
-          en_GB: en_GB
-          zh_TW: zh_TW
-          ko_KR: ko_KR
-          en_US: en_US
-          es_MX: es_MX
-          pt_BR: pt_BR
-          es_ES: es_ES
-          zh_CN: zh_CN
-          fr_FR: fr_FR
-          de_DE: de_DE
+          name:
+            it_IT: it_IT
+            ru_RU: ru_RU
+            en_GB: en_GB
+            zh_TW: zh_TW
+            ko_KR: ko_KR
+            en_US: en_US
+            es_MX: es_MX
+            pt_BR: pt_BR
+            es_ES: es_ES
+            zh_CN: zh_CN
+            fr_FR: fr_FR
+            de_DE: de_DE
+          id: 0
         primary_stat_type:
           name:
             it_IT: it_IT
@@ -1106,9 +1110,9 @@ components:
             $ref: '#/components/schemas/TalentIndexDTO'
           type: array
         spec_talent_tree:
-          $ref: '#/components/schemas/NameDataDTO'
+          $ref: '#/components/schemas/IndexDataDTO'
         power_type:
-          $ref: '#/components/schemas/NameDataDTO'
+          $ref: '#/components/schemas/IndexDataDTO'
         primary_stat_type:
           $ref: '#/components/schemas/RoleIndexDTO'
       required:
