# generated/java/src/main/java/com/blizzardapi/openapi/model/PlayableSpecializationDetailsDTO.java
@@ -2,7 +2,7 @@
  * Blizzard API
  * An OpenAPI specification for Blizzard API
  *
- * The version of the OpenAPI document: 0.1.0
+ * The version of the OpenAPI document: 0.2.0
  * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -84,11 +84,11 @@ public class PlayableSpecializationDetailsDTO {
 
   public static final String SERIALIZED_NAME_SPEC_TALENT_TREE = "spec_talent_tree";
   @SerializedName(SERIALIZED_NAME_SPEC_TALENT_TREE)
-  private NameDataDTO specTalentTree;
+  private IndexDataDTO specTalentTree;
 
   public static final String SERIALIZED_NAME_POWER_TYPE = "power_type";
   @SerializedName(SERIALIZED_NAME_POWER_TYPE)
-  private NameDataDTO powerType;
+  private IndexDataDTO powerType;
 
   public static final String SERIALIZED_NAME_PRIMARY_STAT_TYPE = "primary_stat_type";
   @SerializedName(SERIALIZED_NAME_PRIMARY_STAT_TYPE)
@@ -219,7 +219,7 @@ public class PlayableSpecializationDetailsDTO {
   }
 
 
-  public PlayableSpecializationDetailsDTO specTalentTree(NameDataDTO specTalentTree) {
+  public PlayableSpecializationDetailsDTO specTalentTree(IndexDataDTO specTalentTree) {
     this.specTalentTree = specTalentTree;
     return this;
   }
@@ -229,16 +229,16 @@ public class PlayableSpecializationDetailsDTO {
    * @return specTalentTree
   **/
   @javax.annotation.Nullable
-  public NameDataDTO getSpecTalentTree() {
+  public IndexDataDTO getSpecTalentTree() {
     return specTalentTree;
   }
 
-  public void setSpecTalentTree(NameDataDTO specTalentTree) {
+  public void setSpecTalentTree(IndexDataDTO specTalentTree) {
     this.specTalentTree = specTalentTree;
   }
 
 
-  public PlayableSpecializationDetailsDTO powerType(NameDataDTO powerType) {
+  public PlayableSpecializationDetailsDTO powerType(IndexDataDTO powerType) {
     this.powerType = powerType;
     return this;
   }
@@ -248,11 +248,11 @@ public class PlayableSpecializationDetailsDTO {
    * @return powerType
   **/
   @javax.annotation.Nonnull
-  public NameDataDTO getPowerType() {
+  public IndexDataDTO getPowerType() {
     return powerType;
   }
 
-  public void setPowerType(NameDataDTO powerType) {
+  public void setPowerType(IndexDataDTO powerType) {
     this.powerType = powerType;
   }
 
@@ -445,10 +445,10 @@ public class PlayableSpecializationDetailsDTO {
       };
       // validate the optional field `spec_talent_tree`
       if (jsonObj.get("spec_talent_tree") != null && !jsonObj.get("spec_talent_tree").isJsonNull()) {
-        NameDataDTO.validateJsonElement(jsonObj.get("spec_talent_tree"));
+        IndexDataDTO.validateJsonElement(jsonObj.get("spec_talent_tree"));
       }
       // validate the required field `power_type`
-      NameDataDTO.validateJsonElement(jsonObj.get("power_type"));
+      IndexDataDTO.validateJsonElement(jsonObj.get("power_type"));
       // validate the required field `primary_stat_type`
       RoleIndexDTO.validateJsonElement(jsonObj.get("primary_stat_type"));
   }
